<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="912dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="ExtraText,MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="155dp"
            app:srcCompat="@drawable/safia"
            android:contentDescription="@string/logo"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/belgrano"
            android:text="@string/title2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="13sp" />
        <TextView
            android:id="@+id/textView3"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/belgrano"
            android:text="@string/title3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/belgrano"
            android:text="@string/title4"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:layout_marginBottom="30sp"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:elevation="5dp"
            android:translationZ="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="20dp">
            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_menu"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                app:backgroundTint="@color/white"
                app:itemIconTint="@color/menu_color"
                app:itemTextColor="@color/menu_color"
                app:menu="@menu/menu_bottom" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>




<!--
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/appartements"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/image" />

-->